# project_math

./: 3Dengine.cpp  CMakeLists.txt  cell.cpp  cell.h  fileio.cpp  fileio.h
resources/: diamond.vtk  penta.vtk  pyramid.vtk  quad.vtk  tri.vtk
